src/frontend/app/shared/components/stepper/steppers/steppers.component.theme.scss
@mixin steppers-theme($theme, $app-theme) {
  $primary: map-get($theme, primary);
  $accent: map-get($theme, accent);
  $background-colors: map-get($theme, background);
  $foreground-colors: map-get($theme, foreground);
  .steppers {
    background-color: mat-color($background-colors, background);
    color: map-get($foreground-colors, base);
    &__header {
      &-icon {
        background-color: map-get($app-theme, app-background-color);
        color: map-get($app-theme, app-background-text-color);
      }
      &--active {
        .steppers__header-icon {
          background-color: mat-color($primary, 500);
          color: mat-contrast($primary, 500);
        }
      }
    }
  }
}

